--- a/Sing-Box/config.Windows-example.json
+++ b/Sing-Box/config.Windows-example.json
@@ -358,8 +358,8 @@
 			},
 			"rules": [
 				{
-					"port": 53, //关闭sniff使用
-					//"protocol": "dns", //开启sniff使用
+					"port": 53,
+					//"protocol": "dns",
 					"outbound": "Dns-out"
 				},
 				{
@@ -485,8 +485,8 @@
 		},
 		"experimental": {
 			"clash_api": {
-				"external_controller": "[::]:5618",
-				"secret": "Kztljyjctddl123",
+				"external_controller": "[::]:9090",
+				"secret": "",
 				"external_ui_build_in": true,
 				"default_mode": "rule",
 				"store_selected": true,
